--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "cross-env": "^5.0.1",
     "crypto-js": "^3.1.6",
     "elliptic": "^6.4.0",
